fixed syntax issues and footer spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
 }
 
 header {
+    border-bottom: 1px solid #cccccc;
     padding-left: 15%;
     padding-right:15%;
     color: #ffffff;
@@ -11,6 +12,7 @@ header {
   }
 
 #header2 {
+    border-bottom: 1px solid #cccccc;
     padding-left: 25%;
     padding-right:25%;
     color: #ffffff;
@@ -51,6 +53,7 @@ a {
     float:right; 
     background-blend-mode: color #ffffff;
     text-decoration-color: #cccccc;
+    font-size: 25px;
 }
 
 h3 {
@@ -77,5 +80,9 @@ h4 {
 footer {
     border-top: 8px solid #4aaaa5;
     background: #666666;
-    block-size: 30px 
+    block-size: 30px;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
